--- a/readme
+++ b/readme
@@ -12,7 +12,7 @@ author:Maze
 1.if you can see the menu but crash when clicking the button,
 that is something wrong with the "ifstream" in my code.
 
-(1 is solved,please run the main-1.exe)(i use fopen here)
+(1 is solved,please run the main-fopen.exe)(i use fopen here)
 
 2. if it says libgcc_s_seh-1.dll is missing or 
 unable to start correctly 0xc000007b
